gen/blogger/v3/cargo-errors.log
    Checking google-blogger3 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/blogger/v3/lib)
error[E0412]: cannot find type `ListByUserRoleItems` in module `crate::resources::blogs::params`
    --> blogger/v3/lib/src/lib.rs:2001:63
     |
2001 |             role: Option<Vec<crate::resources::blogs::params::ListByUserRoleItems>>,
     |                                                               ^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::blogs::params`

error[E0412]: cannot find type `ListByUserStatusItems` in module `crate::resources::blogs::params`
    --> blogger/v3/lib/src/lib.rs:2002:65
     |
2002 |             status: Option<Vec<crate::resources::blogs::params::ListByUserStatusItems>>,
     |                                                                 ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::blogs::params`

error[E0412]: cannot find type `ListByUserRoleItems` in module `crate::resources::blogs::params`
    --> blogger/v3/lib/src/lib.rs:2021:71
     |
2021 |                 value: impl Into<Vec<crate::resources::blogs::params::ListByUserRoleItems>>,
     |                                                                       ^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::blogs::params`

error[E0412]: cannot find type `ListByUserStatusItems` in module `crate::resources::blogs::params`
    --> blogger/v3/lib/src/lib.rs:2029:71
     |
2029 |                 value: impl Into<Vec<crate::resources::blogs::params::ListByUserStatusItems>>,
     |                                                                       ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::blogs::params`

error[E0412]: cannot find type `ListStatusItems` in module `crate::resources::comments::params`
    --> blogger/v3/lib/src/lib.rs:2884:68
     |
2884 |             status: Option<Vec<crate::resources::comments::params::ListStatusItems>>,
     |                                                                    ^^^^^^^^^^^^^^^ not found in `crate::resources::comments::params`

error[E0412]: cannot find type `ListStatusItems` in module `crate::resources::comments::params`
    --> blogger/v3/lib/src/lib.rs:2923:74
     |
2923 |                 value: impl Into<Vec<crate::resources::comments::params::ListStatusItems>>,
     |                                                                          ^^^^^^^^^^^^^^^ not found in `crate::resources::comments::params`

error[E0412]: cannot find type `ListByBlogStatusItems` in module `crate::resources::comments::params`
    --> blogger/v3/lib/src/lib.rs:3186:68
     |
3186 |             status: Option<Vec<crate::resources::comments::params::ListByBlogStatusItems>>,
     |                                                                    ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::comments::params`

error[E0412]: cannot find type `ListByBlogStatusItems` in module `crate::resources::comments::params`
    --> blogger/v3/lib/src/lib.rs:3224:74
     |
3224 |                 value: impl Into<Vec<crate::resources::comments::params::ListByBlogStatusItems>>,
     |                                                                          ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::comments::params`

error[E0412]: cannot find type `GetRangeItems` in module `crate::resources::page_views::params`
    --> blogger/v3/lib/src/lib.rs:3809:69
     |
3809 |             range: Option<Vec<crate::resources::page_views::params::GetRangeItems>>,
     |                                                                     ^^^^^^^^^^^^^ not found in `crate::resources::page_views::params`

error[E0412]: cannot find type `GetRangeItems` in module `crate::resources::page_views::params`
    --> blogger/v3/lib/src/lib.rs:3822:76
     |
3822 |                 value: impl Into<Vec<crate::resources::page_views::params::GetRangeItems>>,
     |                                                                            ^^^^^^^^^^^^^ not found in `crate::resources::page_views::params`

error[E0412]: cannot find type `ListStatusItems` in module `crate::resources::pages::params`
    --> blogger/v3/lib/src/lib.rs:4650:65
     |
4650 |             status: Option<Vec<crate::resources::pages::params::ListStatusItems>>,
     |                                                                 ^^^^^^^^^^^^^^^ not found in `crate::resources::pages::params`

error[E0412]: cannot find type `ListStatusItems` in module `crate::resources::pages::params`
    --> blogger/v3/lib/src/lib.rs:4679:71
     |
4679 |                 value: impl Into<Vec<crate::resources::pages::params::ListStatusItems>>,
     |                                                                       ^^^^^^^^^^^^^^^ not found in `crate::resources::pages::params`

error[E0412]: cannot find type `ListStatusItems` in module `crate::resources::post_user_infos::params`
    --> blogger/v3/lib/src/lib.rs:5891:75
     |
5891 |             status: Option<Vec<crate::resources::post_user_infos::params::ListStatusItems>>,
     |                                                                           ^^^^^^^^^^^^^^^ not found in `crate::resources::post_user_infos::params`

error[E0412]: cannot find type `ListStatusItems` in module `crate::resources::post_user_infos::params`
    --> blogger/v3/lib/src/lib.rs:5943:81
     |
5943 |                 value: impl Into<Vec<crate::resources::post_user_infos::params::ListStatusItems>>,
     |                                                                                 ^^^^^^^^^^^^^^^ not found in `crate::resources::post_user_infos::params`

error[E0412]: cannot find type `ListStatusItems` in module `crate::resources::posts::params`
    --> blogger/v3/lib/src/lib.rs:7329:65
     |
7329 |             status: Option<Vec<crate::resources::posts::params::ListStatusItems>>,
     |                                                                 ^^^^^^^^^^^^^^^ not found in `crate::resources::posts::params`

error[E0412]: cannot find type `ListStatusItems` in module `crate::resources::posts::params`
    --> blogger/v3/lib/src/lib.rs:7383:71
     |
7383 |                 value: impl Into<Vec<crate::resources::posts::params::ListStatusItems>>,
     |                                                                       ^^^^^^^^^^^^^^^ not found in `crate::resources::posts::params`

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-blogger3`.

To learn more, run the command again with --verbose.
